<resources>
    <string name="app_name">The Movie Database</string>
    <string name="home_page">Home</string>
    <string name="movie">Movie</string>
    <string name="search">Search</string>
    <string name="tv_show">TV Show</string>
    <string name="celebrities">Celebrities</string>
    <string name="trending">Trending</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_tv">On TV</string>

    <string name="about">About</string>
    <string name="overview">Overview</string>
    <string name="crew">Crew</string>
    <string name="cast">Cast</string>
    <string name="seasons">Season</string>
    <string name="episode">Episode</string>
    <string name="episode_count">Eplisode Count</string>
    <string name="comments">Comment</string>
    <string name="reviews">Review</string>
    <string name="recommendations">Recommend</string>
    <string name="similar">Similar</string>
    <string name="hour">Hour</string>
    <string name="min">Min</string>
    <string name="no_overview_tip">We do not have an overview.</string>
    <string name="no_biography_tip">We do not have a biography.</string>
    <string name="genres">Genres</string>
    <string name="network">Network</string>
    <string name="original_title">Original Title</string>
    <string name="aired_episodes">Aired Episodes</string>
    <string name="status">Status</string>
    <string name="runtime">Runtime</string>
    <string name="original_language">Original Language</string>
    <string name="production_countries">Production Countries</string>
    <string name="certification">Certification</string>
    <string name="companies">Companies</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="alternative_titles">Alternative Titles</string>
    <string name="connection_error">Check your internet connection</string>
    <string name="tap_to_retry">Tap To Retry</string>
    <string name="movie_info">Movie Info</string>
    <string name="tv_info">TV Show Info</string>
    <string name="video">Video</string>
    <string name="keywords">Keyword</string>
    <string name="posters">Poster</string>
    <string name="backdrops">Backdrop</string>
    <string name="no_data">No Data!</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="born_on">Born On</string>
    <string name="died_on">Died On</string>
    <string name="from">From</string>
    <string name="biography">Biography</string>
    <string name="also_known_as">Also Known As</string>
    <string name="season_info">Season Info</string>
    <string name="episode_info">Episode Info</string>
    <string name="first_air_date">First Air Date</string>
    <string name="seasons_number">Seasons Number</string>
    <string name="episode_number">Episode Number</string>
    <string name="guest_stars">Guest Star</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="last_episode_to_air">Last Episode</string>
    <string name="next_episode_to_air">Next Episode</string>
    <string name="released">Released</string>
    <string name="ended">Ended</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="premiere">Premiere</string>
    <string name="theatrical">Theatrical</string>
    <string name="digital">Digital</string>
    <string name="physical">Physical</string>
    <string name="release_info">Release Info</string>

    <string name="your_account">Your Account</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="watchlist">Watchlist</string>
    <string name="favourite">Favourite</string>
    <string name="rating">Rating</string>
    <string name="page_format">Page:%1$d/%2$d</string>
    <string name="total_format">Total:%1$d</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>

    <!-- Strings used for fragments for navigation -->

    <string name="username">Username</string>
    <string name="prompt_password">Password</string>

    <string name="unknow_date">Unknow Date.</string>
    <string name="specials">Specials</string>
    <string name="season_number_format">Season %1$d</string>
    <string name="unknown">Unknown</string>
    <string name="login_tip">Please log in to operate!</string>
    <string name="search_hint">Search Movies, Tv show, Celebrities</string>
    <string name="user_rating">User Rating</string>
    <string name="review_created_time_fromat">%1$s wrote in %2$s</string>
    <string name="adult_content">Adult Content</string>
    <string name="night_mode">Night Mode</string>
    <string name="submit">Submit</string>
    <string name="remove">Remove</string>
    <string name="delete_rating_successfully">Rating deleted successfully</string>
    <string name="delete_rating_failed">Rating deleted failed</string>
    <string name="successful_rating">Successful rating</string>
    <string name="rating_failed">Rating failed</string>
    <string name="successful_operation">Successful operation</string>
    <string name="operation_failed">Operation failed!</string>
    <string name="search_bg_hint">Find your favorite movies, TV shows and people</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="remember_password">Remember Password</string>
    <string name="application_language">Application Language</string>
    <string name="follow_system">Follow System</string>
    <string name="sort_by">排序方式</string>

</resources>