<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.text.TextUtils" />

        <variable
            name="viewModel"
            type="com.goku.tmdb.ui.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{(int)viewModel.dominantColor}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/common_margin"
                android:background="@{viewModel.isDark ? @drawable/round_bg_while : @drawable/round_bg_black}"
                android:onClickListener="@{viewModel.onBackClickListener}"
                android:padding="@dimen/button_padding"
                android:src="@{viewModel.isDark ? @drawable/ic_arrow_back_while : @drawable/ic_arrow_back_black}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/iv_tmdb_logo"
                layout="@layout/toobar_tmdb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/username"
            style="@style/login_editext_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_et_height"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="@dimen/common_margin"
            android:autofillHints=""
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.username}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_toolbar" />

        <EditText
            android:id="@+id/password"
            style="@style/login_editext_style"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_et_height"
            android:layout_margin="@dimen/common_margin"
            android:autofillHints=""
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:text="@={viewModel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <CheckBox
            android:id="@+id/cb_remeber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:checked="@={viewModel.isRemeber}"
            android:text="@string/remember_password"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/login"
            style="@style/normal_button_style"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:enabled="@{TextUtils.isEmpty(viewModel.username) || TextUtils.isEmpty(viewModel.password) ? false : true}"
            android:onClickListener="@{viewModel.onLoginClickListener}"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toStartOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_remeber" />

        <Button
            android:id="@+id/btn_register"
            style="@style/normal_button_style"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login"
            app:layout_constraintTop_toTopOf="@id/login"
            app:layout_constraintVertical_bias="0.1" />

        <include
            layout="@layout/view_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:viewModel="@{viewModel.statusModel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>